Fix for search box overflow on home page - box size in %. Issue #230.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -664,7 +664,7 @@ ul.featureblocks {
 }
 
 .searchbox {
-  width: 640px;
+  width: 85%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
